# V-Gears

./: .gitignore  CMakeLists.txt  COPYING.txt  Doxyfile  README.md  configure_version_file.cmake.in  readme.md  v-gears-installer.desktop  v-gears.desktop  wix.template.in
PlugIns/Data/: CMakeLists.txt
Tests/FinalFantasy7/: CMakeLists.txt
Tests/VGearsMain/: CMakeLists.txt
V-Gears/: CMakeLists.txt
V-Gears-Installer/: CMakeLists.txt
V-Gears-Installer/common/: FontFile.cpp  Logger.cpp  OgreBase.cpp  Surface.cpp  TimToVram.cpp  TimToVram.h  Vram.cpp
V-Gears-Installer/flevel/: CMakeLists.txt
V-Gears-Installer/include/: DataInstaller.h  FieldDataInstaller.h  FieldTextWriter.h  KernelDataInstaller.h  KernelFile.h  MainWindow.h  MediaDataInstaller.h  ModelsAndAnimationsDb.h  SaveMap.h  VGearsUtility.h  ff7DataInstaller.h  mainwindow.h
V-Gears-Installer/lzs/: CMakeLists.txt
V-Gears-Installer/src/: CMakeLists.txt  DataInstaller.cpp  FieldDataInstaller.cpp  FieldTextWriter.cpp  KernelDataInstaller.cpp  MainWindow.cpp  MainWindow.ui  MediaDataInstaller.cpp  ModelsAndAnimationsDb.cpp  ScopedLgp.cpp  VGearsUtility.cpp  ff7DataInstaller.cpp  ff7FieldTextWriter.cpp  flevel.cpp  main.cpp  mainwindow.cpp  mainwindow.ui
V-Gears/include/: FF7Character.h  FF7Common.h  VGearsGameState.h  Version.h  vgears_version.h  vgears_version.h.in
V-Gears/src/: FF7Character.cpp  FF7Common.cpp  Main.cpp  QGearsGameState.cpp
lib/: CMakeLists.txt
lib/SUDM/: CMakeLists.txt
lib/cotire/: CMakeLists.txt
lib/luajit/: .gitignore  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  buildvm  cmake_install.cmake  luajit  minilua
lib/sfxdump/: CMakeLists.txt  sfxdump.c  structs.h
src/: CMakeLists.txt  FF7Character.cpp  FF7Character.h  FF7Common.cpp  FF7Common.h  LuaIncludes.h  VGearsGameState.cpp  VGearsPrerequisites.h  Version.h  Version.h.in  main.cpp
src/common/: File.cpp  FileSystem.cpp  FileSystem.h  LzsFile.cpp  LzsFile.h  VGearsApplication.cpp  VGearsApplication.h  VGearsManualObject.cpp  VGearsManualObject.h  VGearsResource.cpp  VGearsResource.h  VGearsStringUtil.cpp
src/core/: Assert.h  AudioManager.cpp  AudioManager.h  Background2D.cpp  Background2D.h  Background2DAnimation.cpp  Background2DAnimation.h  BattleManager.cpp  BattleManager.h  CameraManager.cpp  CameraManager.h  CameraManagerCommands.h  ConfigCmd.cpp  ConfigCmd.h  ConfigCmdHandler.cpp  ConfigCmdHandler.h  ConfigCmdHandlerCommands.h  ConfigCmdManager.h  ConfigFile.cpp  ConfigVar.cpp  ConfigVar.h  ConfigVarHandler.cpp  ConfigVarHandler.h  ConfigVarManager.cpp  Console.cpp  Console.h  DebugDraw.cpp  DebugDraw.h  DialogsManager.cpp  DialogsManager.h  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  EntityCollision.cpp  EntityCollision.h  EntityDirection.h  EntityManager.cpp  EntityManager.h  EntityModel.cpp  (+73 more)
src/data/: GameData.h  VGearsAFileManager.cpp  VGearsAFileSerializer.cpp  VGearsBackgroundFile.cpp  VGearsBackgroundFileManager.cpp  VGearsBackgroundFileSerializer.cpp  VGearsBackgroundFileSerializer.h  VGearsBackgroundTextureLoader.cpp  VGearsCameraMatrixFile.cpp  VGearsCameraMatrixFile.h  VGearsCameraMatrixFileManager.cpp  VGearsCameraMatrixFileSerializer.cpp  VGearsFLevelBackground2DLoader.cpp  VGearsFLevelBackground2DLoader.h  VGearsFLevelFile.h  VGearsFLevelFileManager.cpp  VGearsFLevelFileSerializer.cpp  VGearsFLevelTextureLoader.cpp  VGearsFLevelTextureLoader.h  VGearsHRCFile.cpp  VGearsHRCFile.h  VGearsHRCFileManager.cpp  VGearsHRCFileManager.h  VGearsHRCFileSerializer.cpp  VGearsHRCFileSerializer.h  VGearsHRCMeshLoader.cpp  VGearsHRCSkeletonLoader.cpp  VGearsHRCSkeletonLoader.h  VGearsLGPArchive.cpp  VGearsLGPArchive.h  VGearsLGPArchiveFactory.cpp  VGearsLGPArchiveFactory.h  VGearsLGPArchiveSerializer.cpp  VGearsLZSDataStream.cpp  VGearsLZSDataStream.h  VGearsLZSFLevelFile.cpp  VGearsLZSFLevelFileManager.cpp  VGearsMapListFile.cpp  VGearsMapListFile.h  VGearsPFile.cpp  (+18 more)
src/installer/: BattleDataInstaller.cpp  BattleDataInstaller.h  CMakeLists.txt  Characters.h  DataInstaller.cpp  DataInstaller.h  DiskImage.cpp  DiskImage.h  FieldDataInstaller.cpp  FieldDataInstaller.h  KernelDataInstaller.cpp  KernelDataInstaller.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  MediaDataInstaller.cpp  MediaDataInstaller.h  ModelsAndAnimationsDb.cpp  ModelsAndAnimationsDb.h  Release.cpp  Release.h  SaveMap.h  ScopedLgp.h  SpawnPointDb.h  TexFile.cpp  TexFile.h  VGearsUtility.cpp  VGearsUtility.h  WorldInstaller.cpp  WorldInstaller.h  installer_resources.qrc  main.cpp  ui_MainWindow.h
src/map/: VGearsBackground2DFile.cpp  VGearsBackground2DFile.h  VGearsBackground2DFileManager.cpp  VGearsBackground2DFileXMLSerializer.h  VGearsMapFile.cpp  VGearsMapFileManager.cpp  VGearsMapFileManager.h  VGearsMapFileXMLSerializer.h  VGearsWalkmeshFile.h  VGearsWalkmeshFileManager.cpp  VGearsWalkmeshFileManager.h  VGearsWalkmeshFileXMLSerializer.cpp  VGearsWalkmeshFileXMLSerializer.h
src/viewer/: ViewerModule.cpp  ViewerModule.h
test/: CMakeLists.txt  FF7Character.cpp  FF7Common.cpp  VGearsGameState.cpp  main.cpp
test/common/: Application.cpp  File.cpp  FileSystem.cpp  LzsFile.cpp  VGearsManualObject.cpp  VGearsResource.cpp  VGearsStringUtil.cpp
test/core/: AudioManager.cpp  Background2D.cpp  Background2DAnimation.cpp  CameraManager.cpp  ConfigCmd.cpp  ConfigCmdHandler.cpp  ConfigCmdManager.cpp  ConfigFile.cpp  ConfigVar.cpp  ConfigVarHandler.cpp  ConfigVarManager.cpp  Console.cpp  DebugDraw.cpp  DialogsManager.cpp  Entity.cpp  EntityCollision.cpp  EntityDirection.cpp  EntityManager.cpp  EntityModel.cpp  EntityPoint.cpp  EntityTrigger.cpp  GameFrameListener.cpp  InputManager.cpp  Savemap.cpp  SavemapManager.cpp  ScriptManager.cpp  TextHandler.cpp  TextManager.cpp  Timer.cpp  UiAnimation.cpp  UiFont.cpp  UiManager.cpp  UiSprite.cpp  UiTextArea.cpp  UiWidget.cpp  Utilites.cpp  Walkmesh.cpp  XmlBackground2DFile.cpp  XmlFile.cpp  XmlFontFile.cpp  (+12 more)
test/data/: VGearsAFile.cpp  VGearsAFileManager.cpp  VGearsAFileSerializer.cpp  VGearsBackgroundFile.cpp  VGearsBackgroundFileManager.cpp  VGearsHRCFile.cpp  (+35 more)
utilities/: CMakeLists.txt
(+1260 files in other folders)
